--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,10 @@ header{
     background-color: #fc0;
     min-height: 160px;
     padding: 20px;
-    align-items: center; 
     display: flex;
-    align-items: center; 
+    align-items: center;
     float: top;
-    top: 0;  
+    top: 0;
 }
 h1, h2{
     margin: 0px;
@@ -24,32 +23,71 @@ nav a{
     flex: 1;
     padding: 10px;
     text-align: center;
+    align-items: center;
     background-color: orange;
+}
+td{
+padding-left: 5px;
+}
+
+.input-group {
+    position: relative;
+    margin: 20px 0;
+}
+.input-group label {
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    font-size: 16px;
+    color: darkblue;
+    padding: 0 5px;
+    pointer-events: none;
+    transition: .5s;
+}
+
+.input-group input {
+    width: 360px;
+    height: 60px;
+    font-size: 16px;
+    color: darkblue;
+    padding: 0 15px;
+    background: transparent;
+    border: 1.2px solid #0ef;
+    outline: none;
+    border-radius: 5px;
+}
+
+.input-group input:focus~label,
+.input-group input:valid~label {
+    top: 0;
+    font-size: 14px;
+    background: lightblue;
+}
+
+.numero {
+    text-align: center;
+    align-items: middle09:45 05/11/2024;
+    box-shadow: 0 0 0 0;
+    border: none;
+    outline: 0;
+    background: transparent;
+    font-size: 28px;
+    color: darkblue;
+    font-weight: bold;
 }
 
 #conteudo, .scroll-container{
     display: flex;
     flex-direction: row;
-    gap: 5px;
-    padding: 10px;
+    gap: 3px;
+    padding: 5px;
     min-height: 200px;
 }
 #conteudo .sessao{
     flex: 1;
-    background-color: #f2f2f2;
-    padding: 10px;
-}
-footer{
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-footer .rodape{
-    flex: 1;
-    background-color: #6666;
-    padding: 10px;
+    background-color: #d1d1d1;
+    padding: 5px;
 }
 .scroll-container {
     overflow: auto;
@@ -57,18 +95,18 @@ footer .rodape{
     padding: 10px;
 }
 .botao {
-    background-color: orangered; 
-    color: white; 
-    padding: 5px 10px; 
-    text-align: center; 
-    text-decoration: none; 
-    display: inline-block; 
-    font-size: 16px; 
-    margin: 4px 2px; 
-    border: none; 
-    border-radius: 8px; 
-    cursor: pointer; 
-    transition: background-color 0.3s, transform 0.2s; 
+    background-color: orangered;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s;
 }
 
 .botao:hover {
@@ -79,6 +117,49 @@ footer .rodape{
 .botao:active {
     transform: scale(0.95); /* Efeito de pressionar */
 }
+
+/* The Modal (background) */
+.modal {
+ display: none; /* Hidden by default */
+ position: fixed; /* Stay in place */
+ z-index: 1; /* Sit on top */
+ left: 0;
+ top: 0;
+ width: 100%; /* Full width */
+ height: 100%; /* Full height */
+/* overflow: auto; */
+ background-color: rgb(0,0,0); /* Fallback color */
+ background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+ background-color: #fefefe;
+ margin: 15% auto; /* 15% from the top and centered */
+ padding: 20px;
+ border: 1px solid #888;
+ width: 80%; /* Could be more or less, depending on screen size */
+ border: 4px solid red;
+ border-radius: 5px;
+ border-style: outet;
+ font-weight: bold;
+}
+
+/* The Close Button */
+.close {
+ color: #aaa;
+ float: right;
+ font-size: 28px;
+ font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+ color: black;
+ text-decoration: none;
+ cursor: pointer;
+} 
+
 
 @media screen{
     nav{
@@ -107,6 +188,6 @@ footer .rodape{
     footer{
         display: flex;
         flex-direction: column;
-        padding-bottom: 50px;
+        padding-bottom: 30px;
     }
 }
