--- a/styles-modal.css
+++ b/styles-modal.css
@@ -1,39 +1,44 @@
-body{
+body {
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
-header{
+
+header {
     background-color: #fc0;
     min-height: 160px;
     padding: 20px;
     display: flex;
     align-items: center;
-    float: top;
     top: 0;
 }
-h1, h2{
+
+h1, h2 {
     margin: 0px;
     padding: 5px;
 }
+
 h1 {
     text-shadow: 2px 2px lightgrey;
 }
-nav a{
+
+nav a {
     flex: 1;
     padding: 10px;
     text-align: center;
     align-items: center;
     background-color: orange;
 }
-td{
-padding-left: 5px;
+
+td {
+    padding-left: 5px;
 }
 
 .input-group {
     position: relative;
     margin: 20px 0;
 }
+
 .input-group label {
     position: absolute;
     top: 50%;
@@ -67,7 +72,7 @@ padding-left: 5px;
 
 .numero {
     text-align: center;
-    align-items: middle09:45 05/11/2024;
+    align-items: center;
     box-shadow: 0 0 0 0;
     border: none;
     outline: 0;
@@ -77,23 +82,26 @@ padding-left: 5px;
     font-weight: bold;
 }
 
-#conteudo, .scroll-container{
+#conteudo, .scroll-container {
     display: flex;
     flex-direction: row;
     gap: 3px;
     padding: 5px;
     min-height: 200px;
 }
-#conteudo .sessao{
+
+#conteudo .sessao {
     flex: 1;
     background-color: #d1d1d1;
     padding: 5px;
 }
+
 .scroll-container {
     overflow: auto;
     white-space: nowrap;
     padding: 10px;
 }
+
 .botao {
     background-color: orangered;
     color: white;
@@ -120,56 +128,63 @@ padding-left: 5px;
 
 /* The Modal (background) */
 .modal {
- display: none; /* Hidden by default */
- position: fixed; /* Stay in place */
- z-index: 1; /* Sit on top */
- left: 0;
- top: 0;
- width: 100%; /* Full width */
- height: 100%; /* Full height */
-/* overflow: auto; */
- background-color: rgb(0,0,0); /* Fallback color */
- background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
 .modal-content {
- background-color: #fefefe;
- margin: 15% auto; /* 15% from the top and centered */
- padding: 20px;
- border: 1px solid #888;
- width: 80%; /* Could be more or less, depending on screen size */
- border: 4px solid red;
- border-radius: 5px;
- border-style: outet;
- font-weight: bold;
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    border: 4px solid red;
+    border-radius: 5px;
+    border-style: outset;
+    font-weight: bold;
 }
 
 /* The Close Button */
 .close {
- color: #aaa;
- float: right;
- font-size: 28px;
- font-weight: bold;
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
- color: black;
- text-decoration: none;
- cursor: pointer;
-} 
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
 
-
-@media screen{
-    nav{
+@media screen {
+    nav {
         display: flex;
         flex-direction: row;
         gap: 5px;
     }
 }
-@media(max-width: 500px){
-    nav{
+
+@media (max-width: 500px) {
+    body, html {
+        overflow-x: hidden; /* Impede a rolagem horizontal */
+    }
+
+    /* Quebra de linha no texto */
+    p, .input-group, .sessao, td {
+        word-wrap: break-word; /* Quebra palavras longas para evitar overflow */
+    }
+
+    nav {
         position: fixed;
         bottom: 0px;
         left: 0px;
@@ -178,14 +193,17 @@ padding-left: 5px;
         width: 100%;
         height: 40px;
     }
+
     nav a {
         display: block;
     }
-    #conteudo, .scroll-container{
-        display:flex;
+
+    #conteudo, .scroll-container {
+        display: flex;
         flex-direction: column;
     }
-    footer{
+
+    footer {
         display: flex;
         flex-direction: column;
         padding-bottom: 30px;
